style.css
canvas {
    position: fixed;
    top: 0;
    left: 0;
}

body {
    user-select: none;
    background-color: #131313;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 100vh;
    font-family: 'Terminus', sans-serif;
    color: #FFFFFF;
    flex-direction: column;
    padding: 25px 0;
    overflow-x: hidden;
    padding-top: 50px;
}

audio {
    margin-top: 10%;
}

.display {
    display: flex;
    flex-direction: row;
    align-items: center;
}

@media (max-width: 800px) {
    .display {
        flex-direction: column;
    }
}

.display div {
    margin: 20px 40px;
}

.column {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.column img {
    margin: 20px 0;
    border-radius: 10px;
}

.box {
    background-color: rgba(206, 230, 245, 0.25);
    backdrop-filter: blur(10px);
    border-radius: 20px;
    padding: 20px;
    text-align: center;
    margin-top: 50px;
}

#particles-js {
    z-index: -1;
}

.pfp {
    border-radius: 50%;
}

h1 {
    margin: -10px 0 -10px 0;
}

@font-face {
    font-family: 'Terminus';
    src: url('Terminus.ttf') format('truetype');
}

